Correctly wrap buttons

--- a/web-app/src/app/color-selector-button/color-selector-button.component.css
+++ b/web-app/src/app/color-selector-button/color-selector-button.component.css
@@ -2,6 +2,8 @@ button {
   width: 25px;
   height: 25px;
   border: 1px solid black;
+  margin: 0;
+  display: block;
 }
 
 button:hover {
