--- a/web-app/src/app/color-selector/color-selector.component.css
+++ b/web-app/src/app/color-selector/color-selector.component.css
@@ -1,17 +1,16 @@
 .selector-container {
   --space: 4px;
-
   display: flex;
-  align-items: stretch;
   gap: var(--space);
 }
 
 .button-container {
   display: flex;
+  width: 300px;
+  flex-wrap: wrap;
   gap: var(--space);
 }
 
 .selected-color-display {
-  width: 50px;
-  aspect-ratio: 1;
+  width: 25px;
 }
